<resources>
    <string name="app_name">Assistive Touch</string>
    <string name="how_to_use_assistive_touch">How to use Assistive Touch</string>
    <string name="properties">Assistive touch protects your phone phycical keys\nProvides easy access</string>
    <string name="use_info">Just start the button to use it</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="brightness_settings_content">You have to give write settings permission to change brightness</string>
    <string name="need_permission">Need Permission</string>
    <string name="camera_permission">Application need camera permission to access camera</string>
    <string name="permission_error">You can\'t use if you don\'t give permission</string>
    <string name="system_write_permission">System settings write permission is needed</string>
    <string name="device_admin_permission">We need device admin permission to lock screen</string>
    <string name="camera_permission_title">Camera Permission</string>

    <string name="request_permission">Request Permission</string>
    <string name="draw_permission">Draw Permission</string>
    <string name="draw_explanation">Draw permission is need for Assitive Touch Button and Touch Board</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="write_settings">Write Settings Permission</string>
    <string name="write_settings_explanation">Write settings permission is need for auto-rotate and brightness adjustment</string>
    <string name="device_admin_permission_title">Device Admin Permission</string>

    <string name="ad_app_id">ca-app-pub-9443930888865587~7763367156</string>
    <string name="main_inter">ca-app-pub-9443930888865587/7623766357</string>
    <string name="main_banner">ca-app-pub-9443930888865587/7623766357</string>

</resources>
